--- a/app/src/main/res/drawable/ic_yandex_logo.xml
+++ b/app/src/main/res/drawable/ic_yandex_logo.xml
@@ -1,5 +1,12 @@
-<vector android:height="24dp" android:viewportHeight="280"
-    android:viewportWidth="280" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#EA2101" android:pathData="M140,140m-140,0a140,140 0,1 1,280 0a140,140 0,1 1,-280 0"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M159.7,149.1h-18.2l-30,60.3H93.9l32.9,-63.8c-8,-2.4 -14.1,-7 -18.4,-13.8c-4.2,-6.8 -6.4,-16.1 -6.4,-28c0,-8 1,-14.8 2.9,-20.4c1.9,-5.6 4.6,-10.2 8.1,-13.9c3.5,-3.6 7.7,-6.3 12.5,-8c4.9,-1.7 10.2,-2.5 16.1,-2.5h32.3v150.4h-14.4V149.1zM159.7,131.2V76.8h-17.9c-3.6,0 -7,0.5 -9.9,1.4c-3,0.9 -5.6,2.4 -7.7,4.5c-2.2,2.1 -3.9,4.9 -5.1,8.3c-1.2,3.4 -1.8,7.7 -1.8,12.7c0,9.5 2,16.5 5.9,20.9c3.9,4.4 9.7,6.6 17.1,6.6H159.7z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="280"
+    android:viewportHeight="280">
+    <path
+        android:fillColor="#EA2101"
+        android:pathData="M140,140m-140,0a140,140 0,1 1,280 0a140,140 0,1 1,-280 0" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M159.7,149.1h-18.2l-30,60.3H93.9l32.9,-63.8c-8,-2.4 -14.1,-7 -18.4,-13.8c-4.2,-6.8 -6.4,-16.1 -6.4,-28c0,-8 1,-14.8 2.9,-20.4c1.9,-5.6 4.6,-10.2 8.1,-13.9c3.5,-3.6 7.7,-6.3 12.5,-8c4.9,-1.7 10.2,-2.5 16.1,-2.5h32.3v150.4h-14.4V149.1zM159.7,131.2V76.8h-17.9c-3.6,0 -7,0.5 -9.9,1.4c-3,0.9 -5.6,2.4 -7.7,4.5c-2.2,2.1 -3.9,4.9 -5.1,8.3c-1.2,3.4 -1.8,7.7 -1.8,12.7c0,9.5 2,16.5 5.9,20.9c3.9,4.4 9.7,6.6 17.1,6.6H159.7z" />
 </vector>
