--- a/app/src/main/res/navigation/register_navigation.xml
+++ b/app/src/main/res/navigation/register_navigation.xml
@@ -11,7 +11,7 @@
         android:label="RegRoleFragment"
         tools:layout="@layout/register_role_fragment">
         <action
-            android:id="@+id/roleToTwoAction"
+            android:id="@+id/roleToTwo"
             app:destination="@id/regTwoFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
@@ -27,13 +27,70 @@
             app:argType="integer"
             android:defaultValue="-1" />
         <action
-            android:id="@+id/twoToThree"
-            app:destination="@id/regThreeFragment"
+            android:id="@+id/twoToWorkerThree"
+            app:destination="@id/regThreeWorkerFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/twoToCustomerThree"
+            app:destination="@id/regThreeCustomerFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
+    <fragment
+        android:id="@+id/regThreeWorkerFragment"
+        android:name="com.proact.poject.serku.proact.ui.fragments.RegThreeWorkerFragment"
+        android:label="RegThreeFragment"
+        tools:layout="@layout/register_step_three_worker_fragment">
+        <action
+            android:id="@+id/threeToFour"
+            app:destination="@id/regFourFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <argument android:name="role"
+            app:argType="integer"
+            android:defaultValue="-1" />
+        <argument
+            android:name="email"
+            app:argType="string"
+            android:defaultValue=" " />
+        <argument
+            android:name="pass"
+            app:argType="string"
+            android:defaultValue=" " />
+    </fragment>
+
+    <fragment
+        android:id="@+id/regThreeCustomerFragment"
+        android:name="com.proact.poject.serku.proact.ui.fragments.RegThreeCustomerFragment"
+        android:label="RegThreeFragment"
+        tools:layout="@layout/register_step_three_customer_fragment">
+        <action
+            android:id="@+id/threeToFour"
+            app:destination="@id/regFourFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <argument android:name="role"
+            app:argType="integer"
+            android:defaultValue="-1" />
+        <argument
+            android:name="email"
+            app:argType="string"
+            android:defaultValue=" " />
+        <argument
+            android:name="pass"
+            app:argType="string"
+            android:defaultValue=" " />
+    </fragment>
+
     <fragment
         android:id="@+id/regFourFragment"
         android:name="com.proact.poject.serku.proact.ui.fragments.RegFourFragment"
@@ -71,28 +128,5 @@
             app:argType="string"
             android:defaultValue=" " />
     </fragment>
-    <fragment
-        android:id="@+id/regThreeFragment"
-        android:name="com.proact.poject.serku.proact.ui.fragments.RegThreeFragment"
-        android:label="RegThreeFragment"
-        tools:layout="@layout/register_step_three_fragment">
-        <action
-            android:id="@+id/threeToFour"
-            app:destination="@id/regFourFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
-            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
-            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
-        <argument android:name="role"
-            app:argType="integer"
-            android:defaultValue="-1" />
-        <argument
-            android:name="email"
-            app:argType="string"
-            android:defaultValue=" " />
-        <argument
-            android:name="pass"
-            app:argType="string"
-            android:defaultValue=" " />
-    </fragment>
+
 </navigation>
