register third step realisation added

--- a/app/src/main/res/layout/register_step_three_worker_fragment.xml
+++ b/app/src/main/res/layout/register_step_three_worker_fragment.xml
@@ -48,6 +48,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:helperText="@string/optional_helper_text"
         android:hint="@string/middlename"
         android:layout_marginBottom="@dimen/mediumPadding"
         app:errorEnabled="false"
