LogScreen change from activity to fragment

--- a/app/src/main/res/layout/logscreen_fragment.xml
+++ b/app/src/main/res/layout/logscreen_fragment.xml
@@ -83,6 +83,7 @@
         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
         android:textColor="@color/colorPrimary"
         app:cornerRadius="5dp"
+        android:enabled="false"
         app:layout_constraintBottom_toTopOf="@id/logscrRegisterButton"
         app:layout_constraintTop_toBottomOf="@id/logscrPassInput"
         app:layout_constraintVertical_chainStyle="packed" />
