--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="colorWorkerButton">#799434</color>
     <color name="colorCustomerButton">#9B362F</color>
 
-    <color name="navBottomCheckedFalse">@android:color/darker_gray</color>
+    <color name="navBottomCheckedFalse">#b0bec5</color>
 </resources>
