--- a/app/src/main/res/layout/activity_detailed_project.xml
+++ b/app/src/main/res/layout/activity_detailed_project.xml
@@ -75,19 +75,20 @@
         android:id="@+id/projectTeamsRv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="@dimen/mediumPadding"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/projectAboutText"
-        tools:listitem="@layout/item_team"
-        tools:itemCount="1"/>
+        tools:itemCount="1"
+        tools:listitem="@layout/item_team" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
