--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_marginBottom="@dimen/mediumPadding"
     app:cardCornerRadius="@dimen/projectCardCornerRadius">
 
     <androidx.constraintlayout.widget.ConstraintLayout
