--- a/app/src/main/res/layout/activity_detailed_project.xml
+++ b/app/src/main/res/layout/activity_detailed_project.xml
@@ -52,6 +52,14 @@
             tools:text="Свобожных мест: 20/30" />
 
         <TextView
+            android:id="@+id/projectDeadlineText"
+            style="@style/TextAppearance.MaterialComponents.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/smallPadding"
+            tools:text="Запись до: 24.08.1902" />
+
+        <TextView
             android:id="@+id/projectStatusText"
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="wrap_content"
