--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/smallPadding"
-    android:paddingBottom="@dimen/smallPadding">
+    android:paddingBottom="@dimen/smallPadding"
+    android:layout_marginBottom="@dimen/smallPadding">
 
     <TextView
         android:id="@+id/member"
