--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -5,47 +5,37 @@
     style="@style/Widget.MaterialComponents.CardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_marginBottom="@dimen/mediumPadding"
+    android:orientation="vertical"
     app:cardCornerRadius="@dimen/projectCardCornerRadius">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/teamContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center">
+        android:layout_gravity="top|center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/teamNumber"
             style="@style/TextAppearance.MaterialComponents.Subtitle1"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="@dimen/smallPadding"
             android:layout_marginTop="@dimen/smallPadding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Команда #1" />
 
         <View
             android:id="@+id/divider"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="1dp"
-            app:layout_constraintTop_toBottomOf="@id/teamNumber"
-            android:background="@android:color/darker_gray"
-            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="@dimen/smallPadding"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginBottom="@dimen/smallPadding"
+            android:background="@android:color/darker_gray" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/teamRv"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/smallPadding"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/divider"
-            tools:listitem="@layout/item_member"
-            tools:itemCount="3"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
