back arrow fixed, projectViewModel delegating changed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,6 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBar" />
+        app:layout_constraintBottom_toTopOf="@id/mainBottomNavigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
