--- a/app/src/main/res/layout/fragment_my_projects.xml
+++ b/app/src/main/res/layout/fragment_my_projects.xml
@@ -21,6 +21,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tab_finished"/>
+
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tab_requests"/>
     </com.google.android.material.tabs.TabLayout>
 
 
