--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -8,6 +8,7 @@
     android:layout_margin="@dimen/mediumPadding"
     android:clickable="true"
     android:focusable="true"
+    app:cardBackgroundColor="@color/colorCard"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardCornerRadius="@dimen/projectCardCornerRadius"
     app:contentPadding="@dimen/mediumPadding">
