--- a/app/src/main/res/layout/item_member.xml
+++ b/app/src/main/res/layout/item_member.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,14 +10,12 @@
     <TextView
         android:id="@+id/member"
         style="@style/TextAppearance.MaterialComponents.Body1"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_marginStart="@dimen/smallPadding"
-        app:layout_constraintBottom_toBottomOf="@id/memberSignButton"
-        app:layout_constraintEnd_toStartOf="@id/memberSignButton"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/memberSignButton"
+        android:layout_toStartOf="@+id/memberSignButton"
         tools:text="Android: Ivanov Peter" />
 
     <com.google.android.material.button.MaterialButton
@@ -27,10 +24,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/profile"
+        android:layout_alignParentEnd="true"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:visibility="invisible" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/memberSignButton"
@@ -38,9 +34,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sign_button"
+        android:layout_centerInParent="true"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentEnd="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
